ref: small changes